# mana-pizza

./: .gitignore  Makefile  README.md
app/: Dockerfile  app.py  pyproject.toml
app/static/: mana-pizza.js  styles.css
app/templates/: index.html
mana_pizza/: __init__.py
mana_pizza/commons/: mtg.py  scryfall.py
mana_pizza/lands/: basic.py  dual.py  fetch.py  other.py  rainbow.py
scripts/: requirements.txt  update_db.py
