[tool.poetry]
name = "mana-pizza-webapp"
version = "0.1.0"
description = "Web Application for EDH mana smoothing."
authors = ["Flávio Teixeira <flavio.mtps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
flask-wtf = "^1.2.1"
uwsgi = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
